--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -103,6 +103,9 @@
     <Compile Include="Base\IAgentCommand.cs" />
     <Compile Include="Base\AgentCommandType.cs" />
     <Compile Include="Base\AttackModel.cs" />
+    <Compile Include="Base\IMap.cs" />
+    <Compile Include="Base\IMapPath.cs" />
+    <Compile Include="Base\IMapTile.cs" />
     <Compile Include="Base\ISimulationManager.cs" />
     <Compile Include="Base\ISimulationState.cs" />
     <Compile Include="Base\ScheduledOneTimeTask.cs" />
@@ -147,13 +150,13 @@
     <Compile Include="Base\IIndicator.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
     <Compile Include="Map\MapModel.cs" />
-    <Compile Include="Map\MapPath.cs" />
+    <Compile Include="Map\MapPathModel.cs" />
     <Compile Include="Base\Modifier.cs" />
     <Compile Include="Base\ModifierCollection.cs" />
     <Compile Include="Base\ModifierPriority.cs" />
     <Compile Include="Graphics\StyleArgs.cs" />
     <Compile Include="Towers\TargettingBase.cs" />
-    <Compile Include="Map\Tile.cs" />
+    <Compile Include="Map\MapTileModel.cs" />
     <Compile Include="Towers\TowerBase.cs" />
     <Compile Include="Services\EnumUtils.cs" />
     <Compile Include="FieldController.cs" />
