--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -98,16 +98,18 @@
     </Compile>
     <Compile Include="Base\AgentBase.cs" />
     <Compile Include="Base\CommandTask.cs" />
-    <Compile Include="Base\CommandCollection.cs" />
+    <Compile Include="Base\CoreLabels.cs" />
     <Compile Include="Base\CreateAgentArgs.cs" />
     <Compile Include="Base\IAgentCommand.cs" />
     <Compile Include="Base\AgentCommandType.cs" />
     <Compile Include="Base\AttackModel.cs" />
+    <Compile Include="Base\ILabelProvider.cs" />
     <Compile Include="Base\IMap.cs" />
     <Compile Include="Base\IMapPath.cs" />
     <Compile Include="Base\IMapTile.cs" />
     <Compile Include="Base\ISimulationManager.cs" />
     <Compile Include="Base\ISimulationState.cs" />
+    <Compile Include="Base\IVersionedCollection.cs" />
     <Compile Include="Base\ScheduledOneTimeTask.cs" />
     <Compile Include="Base\SpawnAgentTask.cs" />
     <Compile Include="Base\StatModel.cs" />
@@ -127,10 +129,13 @@
     <Compile Include="Services\HoverEventArgs.cs" />
     <Compile Include="Services\KeyPressEventArgs.cs" />
     <Compile Include="LevelUi\StatusBar.cs" />
+    <Compile Include="Services\LabelProvider.cs" />
     <Compile Include="Services\ListExtensions.cs" />
     <Compile Include="Services\PanByEventArgs.cs" />
     <Compile Include="Services\IScreenManager.cs" />
+    <Compile Include="Services\SimpleSortedList.cs" />
     <Compile Include="Services\TouchEventArgs.cs" />
+    <Compile Include="Services\VersionedCollection.cs" />
     <Compile Include="SimulationStateModel.cs" />
     <Compile Include="Towers\BuyTowerCommand.cs" />
     <Compile Include="Towers\EmptyTowerFactory.cs" />
@@ -151,8 +156,7 @@
     <Compile Include="Base\IndicatorCollection.cs" />
     <Compile Include="Map\MapModel.cs" />
     <Compile Include="Map\MapPathModel.cs" />
-    <Compile Include="Base\Modifier.cs" />
-    <Compile Include="Base\ModifierCollection.cs" />
+    <Compile Include="Base\IStatModifier.cs" />
     <Compile Include="Base\ModifierPriority.cs" />
     <Compile Include="Graphics\StyleArgs.cs" />
     <Compile Include="Towers\TargettingBase.cs" />
