--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -104,10 +104,14 @@
     <Compile Include="Base\CreateAgentArgs.cs" />
     <Compile Include="Base\IAgent.cs" />
     <Compile Include="Base\IBaseStats.cs" />
+    <Compile Include="Base\ICalculateAgentStatsModifier.cs" />
+    <Compile Include="Base\IAttackModifier.cs" />
+    <Compile Include="Base\IHitModifier.cs" />
+    <Compile Include="Base\IRemoveModifier.cs" />
     <Compile Include="ExecuteEventArgs.cs" />
     <Compile Include="Base\IAgentCommand.cs" />
     <Compile Include="Base\AgentCommandType.cs" />
-    <Compile Include="Base\AttackModel.cs" />
+    <Compile Include="Base\AttackEventArgs.cs" />
     <Compile Include="Base\IExecuteEventArgs.cs" />
     <Compile Include="Base\ILabelProvider.cs" />
     <Compile Include="Base\IMap.cs" />
@@ -168,7 +172,7 @@
     <Compile Include="Base\IndicatorCollection.cs" />
     <Compile Include="Map\MapModel.cs" />
     <Compile Include="Map\MapPathModel.cs" />
-    <Compile Include="Base\IStatModifier.cs" />
+    <Compile Include="Base\IModifier.cs" />
     <Compile Include="Base\ModifierPriority.cs" />
     <Compile Include="Graphics\StyleArgs.cs" />
     <Compile Include="Towers\TargettingBase.cs" />
