--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Base\CreateAgentArgs.cs" />
     <Compile Include="Base\IAgent.cs" />
     <Compile Include="Base\IBaseStats.cs" />
-    <Compile Include="Base\ICalculateAgentStatsModifier.cs" />
+    <Compile Include="Base\IAgentStatsModifier.cs" />
     <Compile Include="Base\IAttackModifier.cs" />
     <Compile Include="Base\IHitModifier.cs" />
     <Compile Include="Base\IRemoveModifier.cs" />
@@ -166,7 +166,6 @@
     <Compile Include="Graphics\DrawLayer.cs" />
     <Compile Include="Base\IExtendedAgent.cs" />
     <Compile Include="Base\IAgentProvider.cs" />
-    <Compile Include="Base\IBehaviourComponent.cs" />
     <Compile Include="Graphics\IGraphicsResource.cs" />
     <Compile Include="Base\IIndicator.cs" />
     <Compile Include="Base\IndicatorCollection.cs" />
@@ -190,7 +189,6 @@
     </Compile>
     <Compile Include="Mobs\BlockMob.cs" />
     <Compile Include="Mobs\BlockMobBaseIndicator.cs" />
-    <Compile Include="Base\NilBehaviour.cs" />
     <Compile Include="Graphics\HexagonIndicator.cs" />
     <Compile Include="Graphics\LabelIndicator.cs" />
     <Compile Include="Mobs\PathMobBehaviour.cs" />
@@ -203,9 +201,7 @@
     <Compile Include="Services\IConfig.cs" />
     <Compile Include="Services\TaskExtensions.cs" />
     <Compile Include="Towers\GunTower.cs" />
-    <Compile Include="Towers\GunTowerBaseBehaviour.cs" />
     <Compile Include="Towers\GunTowerBaseIndicator.cs" />
-    <Compile Include="Towers\GunTowerBaseModifier.cs" />
     <Compile Include="Towers\TowerTileIndicator.cs" />
     <Compile Include="Towers\EmptyTower.cs" />
     <Compile Include="UiStateModel.cs" />
