--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -129,7 +129,12 @@
     <Compile Include="Base\IUpdatable.cs" />
     <Compile Include="Base\BuiltinAgentProvider.cs" />
     <Compile Include="Graphics\IGraphicsComponent.cs" />
+    <Compile Include="Graphics\IGraphicsProvider.cs" />
     <Compile Include="Graphics\RelativePositionGraphicsComponent.cs" />
+    <Compile Include="LevelUi\OverlayGraphicsProvider.cs" />
+    <Compile Include="Map\MapGraphicsProvider.cs" />
+    <Compile Include="Map\TileAreaIndicator.cs" />
+    <Compile Include="Map\TileOutlineIndicator.cs" />
     <Compile Include="Services\ConfigUtils.cs" />
     <Compile Include="Services\JsonConfig.cs" />
     <Compile Include="UpdateEventArgs.cs" />
@@ -160,7 +165,6 @@
     <Compile Include="Towers\GunTowerFactory.cs" />
     <Compile Include="Towers\GunTowerSharedResources.cs" />
     <Compile Include="Towers\GunTowerStrategicIndicator.cs" />
-    <Compile Include="Towers\TowerHoverIndicator.cs" />
     <Compile Include="Base\PlayerModel.cs" />
     <Compile Include="Graphics\CreateResourcesArgs.cs" />
     <Compile Include="Graphics\DrawArgs.cs" />
@@ -202,7 +206,6 @@
     <Compile Include="Services\TaskExtensions.cs" />
     <Compile Include="Towers\GunTower.cs" />
     <Compile Include="Towers\GunTowerBaseIndicator.cs" />
-    <Compile Include="Towers\TowerTileIndicator.cs" />
     <Compile Include="Towers\EmptyTower.cs" />
     <Compile Include="UiStateModel.cs" />
     <Compile Include="Services\ZoomToPointEventArgs.cs" />
