--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Graphics\IGraphicsProvider.cs" />
     <Compile Include="Graphics\RelativePositionGraphicsComponent.cs" />
     <Compile Include="Level\OverlayGraphicsProvider.cs" />
+    <Compile Include="Level\SimulationManager.cs" />
     <Compile Include="Map\MapGraphicsProvider.cs" />
     <Compile Include="Map\TileAreaIndicator.cs" />
     <Compile Include="Map\TileOutlineIndicator.cs" />
