Remove IGraphicsResource implementation from chain of controllers

--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -150,7 +150,7 @@
     <Compile Include="Map\BuiltinMapProvider.cs" />
     <Compile Include="Map\IMapProvider.cs" />
     <Compile Include="Mobs\BlockMobFactory.cs" />
-    <Compile Include="Mobs\BlockMobSharedResources.cs" />
+    <Compile Include="Mobs\BlockMobGraphicsProvider.cs" />
     <Compile Include="Services\EventArgsBase.cs" />
     <Compile Include="Services\HoverEventArgs.cs" />
     <Compile Include="Services\KeyPressEventArgs.cs" />
@@ -165,9 +165,9 @@
     <Compile Include="Level\SimulationStateModel.cs" />
     <Compile Include="Towers\BuyTowerCommand.cs" />
     <Compile Include="Towers\EmptyTowerFactory.cs" />
-    <Compile Include="Towers\EmptyTowerSharedResources.cs" />
+    <Compile Include="Towers\EmptyTowerGraphicsProvider.cs" />
     <Compile Include="Towers\GunTowerFactory.cs" />
-    <Compile Include="Towers\GunTowerSharedResources.cs" />
+    <Compile Include="Towers\GunTowerGraphicsProvider.cs" />
     <Compile Include="Towers\GunTowerStrategicIndicator.cs" />
     <Compile Include="Base\PlayerModel.cs" />
     <Compile Include="Graphics\CreateResourcesArgs.cs" />
