--- a/Catch/Catch.csproj
+++ b/Catch/Catch.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Level\SimulationStateModel.cs" />
     <Compile Include="Towers\BuyTowerCommand.cs" />
     <Compile Include="Towers\EmptyTowerGraphicsProvider.cs" />
+    <Compile Include="Towers\GunTowerBehaviour.cs" />
     <Compile Include="Towers\GunTowerGraphicsProvider.cs" />
     <Compile Include="Towers\GunTowerStrategicIndicator.cs" />
     <Compile Include="Base\PlayerModel.cs" />
@@ -179,6 +180,7 @@
     <Compile Include="Base\IModifier.cs" />
     <Compile Include="Base\ModifierPriority.cs" />
     <Compile Include="Graphics\StyleArgs.cs" />
+    <Compile Include="Towers\NilAgentBehaviour.cs" />
     <Compile Include="Towers\TargettingBase.cs" />
     <Compile Include="Map\MapTileModel.cs" />
     <Compile Include="Services\EnumUtils.cs" />
