Added some basic StyleGraphicsProvider machinery

--- a/Catch/Assets/config.json
+++ b/Catch/Assets/config.json
@@ -2,6 +2,8 @@
   "Bootstrapper.MapsFolder": "Assets\\maps",
   "Bootstrapper.InitialMap": "MapOne.json",
 
+  "StyleGraphicsProvider.StylesJson":  "Assets\\styles.json",
+
   "Core.TileRadius": 60.0,
   "Core.TileRadiusInset": 1.5,
   "Core.PlayerTeam": 0,
