Add config value resolution to DictionaryConfig
If the value for a config entry happens to match the name of another config entry, it will be replaced by that value.

--- a/Catch/Assets/config.json
+++ b/Catch/Assets/config.json
@@ -5,6 +5,7 @@
 
   "Core.TileRadius": 60.0,
   "Core.TileRadiusInset": 1.5,
+  "Core.TileRadiusAfterInset" : 58.5,
   "Core.PlayerTeam": 0,
   "Core.TicksPerSecond": 60.0,
 
