AssetModels now loaded and combined from folder
Makes related assets (say, for a particular agent type) easier to deal with.

--- a/Catch/Assets/config.json
+++ b/Catch/Assets/config.json
@@ -1,7 +1,7 @@
 ﻿{
   "Bootstrapper.MapsFolder": "Assets\\maps",
   "Bootstrapper.InitialMap": "MapOne.json",
-  "LevelBootstrapper.Assets" :  "Assets\\assets.json",
+  "LevelBootstrapper.ModelsFolder" :  "Assets\\models",
 
   "Core.TileRadius": 60.0,
   "Core.TileRadiusInset": 1.5,
